--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,11 @@ html, body {
 body {
   background: url(../images/backgrounds/architecture.jpg) center no-repeat;
   background-size: cover;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  color: #333;
+  background-color: #f0f0f0;
   background-attachment: fixed;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 100%;
 }
 
 .wrapper {
@@ -26,7 +28,7 @@ body {
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: #007bff;
 }
 
 h1 {
@@ -43,6 +45,7 @@ h3 {
   font-family: 'Gabriela', serif;
   font-size: 1.5em;
   margin-top: .5em;
+  color: #666;
 }
 
 img {
@@ -53,6 +56,7 @@ img {
 
 p {
   font-size: 1em;
+  line-height: 1.5;
 }
 
 a {
